1. Collection API Улучшения[#141662]