@@ -16,25 +16,19 @@ public class ConvertListTest {
     @Test
     public void whenConvertSuccess() {
         ConvertList convertList = new ConvertList();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
+        List<int[]> list = List.of(new int[]{1, 2},new int[]{3, 4, 5, 6});
         List<Integer> result = convertList.convert(list);
-        List<Integer> expect = Arrays.asList(1,2,3,4,5,6);
+        List<Integer> expect = List.of(1,2,3,4,5,6);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenConvert20NumbersSuccess() {
         ConvertList convertList = new ConvertList();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
-        list.add(new int[]{7, 8, 9, 10});
-        list.add(new int[]{11});
-        list.add(new int[]{12,13,14,15,16,17,18,19,20});
+        List<int[]> list = List.of(new int[]{1, 2},new int[]{3, 4, 5, 6}
+        ,new int[]{7, 8, 9, 10},new int[]{11},new int[]{12,13,14,15,16,17,18,19,20});
         List<Integer> result = convertList.convert(list);
-        List<Integer> expect = Arrays.asList(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20);
+        List<Integer> expect = List.of(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20);
         assertThat(result, is(expect));
     }
 }
