@@ -16,7 +16,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4
         );
         List<Integer> result = list.toList(input);
@@ -31,7 +31,7 @@ public class ConvertMatrix2ListTest {
                 {4, 5, 6},
                 {7, 8, 9}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 6, 7, 8, 9
         );
         List<Integer> result = list.toList(input);
